add angular-chart.js dependency and example and bootstrap css

--- a/public/app/modules/mymodule/view/MyView.html
+++ b/public/app/modules/mymodule/view/MyView.html
@@ -1,1 +1,10 @@
-<p>This is my view and my controller is {{controllerName}}.</p>
+<div class="row">
+    <div class="panel-body col-sm-6">
+        <div class="chart-container">
+            <canvas id="line" class="chart chart-line" chart-data="data"
+                    chart-labels="labels" chart-legend="true" chart-series="series"
+                    chart-click="onClick" >
+            </canvas>
+        </div>
+    </div>
+</div>
