Se sube un nuevo tmpl

--- a/public/app/modules/mymodule/view/MyView.html
+++ b/public/app/modules/mymodule/view/MyView.html
@@ -1,3 +1,5 @@
+<h2 class="title">Dashboard</h2>
+<hr class="hr">
 <div class="row">
     <div class="panel-body col-sm-6">
         <div class="chart-container">
