--- a/public/app/partials/navigation.tpl.html
+++ b/public/app/partials/navigation.tpl.html
@@ -1,4 +1,22 @@
-<ul class="menu">
-    <li><a data-ui-sref="myview1">view1</a></li>
-    <li><a data-ui-sref="myview2">view2</a></li>
-</ul>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Demo</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbar">
+            <ul class="nav navbar-nav">
+                <li><a data-ui-sref="myview1">Dashboard</a></li>
+                <li><a data-ui-sref="myview2">Users</a></li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
