--- a/public/app/partials/navigation.tpl.html
+++ b/public/app/partials/navigation.tpl.html
@@ -14,8 +14,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
-                <li><a data-ui-sref="myview1">Dashboard</a></li>
-                <li><a data-ui-sref="myview2">Users</a></li>
+                <li><a data-ui-sref="dashboard">Dashboard</a></li>
+                <li><a data-ui-sref="userlist">Users</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
