--- a/public/app/modules/user/view/UserListView.html
+++ b/public/app/modules/user/view/UserListView.html
@@ -1,13 +1,15 @@
 <h2 class="title">Users</h2>
 <hr class="hr">
 
+<button class="btn btn-primary col col-3 pull-right" data-ng-click="create()">Create user</button>
+
 <table class="table table-hover">
     <thead>
     <th>Id</th>
     <th>First name</th>
     <th>Login</th>
-    <th>Correo electrónico</th>
-    <th>Acciones</th>
+    <th>Email</th>
+    <th>Actions</th>
     </thead>
     <tbody>
         <tr data-ng-repeat="user in users">
